--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "my-hate-crime-acts-site",
+    "name": "my-hate-crime-acts-app",
     "version": "1.0.0",
     "private": true,
     "scripts": {
@@ -8,7 +8,7 @@
       "start": "next start"
     },
     "dependencies": {
-      "next": "13.0.0",
+      "next": "15.0.0",
       "react": "18.2.0",
       "react-dom": "18.2.0"
     }
